spec/error_loop_with_do.kex
# `loop do` (old syntax) no longer parses — just `loop`.
main do
  loop do
    break
  end
end
